force-app/main/default/objects/Customer_360__c/Customer_360__c.object-meta.xml
<CustomObject>
    <description>Part of EGH__Customer_360 Package</description>
    <label>Customer 360</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Customer 360 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer 360</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>