force-app/main/default/objects/Customer_360__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <inlineHelpText>External</inlineHelpText>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>External_Systems</valueSetName>
    </valueSet>
</CustomField>